# posemesh

./: .cursorrules  .gitignore  .gitmodules  LICENSE  README.md  build.sh  research.md
core/: .env  Cargo.toml  Makefile  README.md  build-wasm.sh  pyproject.toml
core/.cargo/: config.toml
core/base/: Cargo.toml
core/base/src/: lib.rs
core/compute-node/: Cargo.toml  README.md
core/compute-node-runner-api/: Cargo.toml  README.md
core/compute-node-runner-api/src/: lib.rs  runner.rs  types.rs
core/compute-node-runner-api/tests/: runner_api.rs
core/compute-node/src/: config.rs  engine.rs  errors.rs  heartbeat.rs  http.rs  lib.rs  poller.rs  session.rs  telemetry.rs
core/compute-node/tests/: config_tests.rs  dms_client_min.rs  dms_paths.rs  domain_client_http.rs  engine_dms_flow.rs  engine_registry.rs  engine_storage_ports.rs  error_types.rs  heartbeat_client.rs  heartbeat_loop.rs  heartbeat_scheduler.rs  http_endpoints.rs  multipart_upload_token_rotation.rs  poller_backoff.rs  runner_dispatch.rs  storage_errors.rs  storage_layout.rs  telemetry_init.rs  token_rotation.rs
core/disco/: Cargo.toml  build.rs
core/disco/src/: client.rs  error.rs  lib.rs  utils.rs  wasm.rs
core/domain/: Cargo.toml  README.md  build.rs
core/domain-http/: CHANGELOG.md  Cargo.toml  README.md  build.rs
core/domain-http/js-tests/: README.md  basic.test.ts  package-lock.json  package.json  vitest.browser.config.js  vitest.config.js
core/domain-http/src/: auth.rs  config.rs  discovery.rs  domain-client.udl  domain.rs  domain_client.rs  domain_data.rs  errors.rs  lib.rs  reconstruction.rs  uniffi.rs  wasm.rs
core/domain/src/: auth.rs  binding_helper.rs  c.rs  cluster.rs  data.rs  datastore.rs  dds_client.rs  lib.rs  message.rs  remote.rs  wasm.rs
core/examples/: data_node.rs  dmt.rs  domain_manager.rs  private_dialer.rs  private_receiver.rs  reconstruction_node.rs  relay.rs
core/examples/client/: Cargo.toml
core/examples/data-node/: Cargo.toml
core/examples/domain-manager/: Cargo.toml
core/examples/reconstruction-node/: Cargo.toml  Dockerfile
core/examples/relay/: Cargo.toml
core/examples/test-concurrent/: Cargo.toml
core/networking/: Cargo.toml  build.rs
core/networking/src/: binding_helper.rs  c.rs  c_compat_wasm.rs  client.rs  context.rs  event.rs  lib.rs  libp2p.rs  network.rs
core/node-registration/: Cargo.toml  README.md
core/node-registration/src/: crypto.rs  http.rs  lib.rs  persist.rs  register.rs  state.rs
core/protobuf/: Cargo.toml  discovery.proto  domain_data.proto  task.proto
core/protobuf/common/: common.proto
core/protobuf/disco/: domain.proto  msg.proto  node.proto  portal.proto
core/protobuf/domain-cluster/: discovery.proto  domain_data.proto  task.proto
core/protobuf/src/: lib.rs
core/runtime/: Cargo.toml
core/runtime/src/: lib.rs
core/scripts/: Build-Apple.ps1  Build-Library.ps1  pybindgen.sh
core/uniffi-bindgen/: Cargo.toml
core/utils/: Cargo.toml
core/utils/src/: crypto.rs  lib.rs
networking/: .gitignore  Cargo.toml  README.md  build.rs
networking/.pyvenv/: pyvenv.cfg
networking/examples/: autonat_client.rs  data_node.rs  dmt.rs  domain_manager.rs  private_dialer.rs  private_receiver.rs  reconstruction_node.rs  relay.rs
networking/include/posemesh-networking/: c_psm_net.h
networking/scripts/: Build-Apple.ps1  Build-Library.ps1  build.sh  pybindgen.sh
networking/src/: api.rs  client.rs  context.rs  event.rs  lib.rs  network.rs
sdk/: .gitignore  CMakeLists.txt  README.md  example-projects.md
sdk/cmake/: AddGLMHeaders.cmake  AddLibraryImportsEmscripten.cmake  AddPlatformLibrary.cmake  AddPlatformSources.cmake  AddProtobuf.cmake  AddProtobufLibraries.cmake  AddProtoc.cmake  CompileProtoFiles.cmake  CopyFileWithTextReplace.cmake  FindClangFormat.cmake  GetBuildDirectorySuffix.cmake  GetCommitId.cmake  GetRustTargetName.cmake  LinkBaseLibrary.cmake  LinkDomainLibrary.cmake  LinkNetworkingLibrary.cmake  LinkOpenCVLibrary.cmake  LinkPlatformLibraries.cmake  LinkProtobuf.cmake  LinuxAArch64Toolchain.cmake  MergeFiles.cmake  Platform.cmake  PlatformCheck.cmake  ReplaceJavaScriptSymbols.cmake  SetAppleInfo.cmake  SetApplePlatformBridgingHeader.cmake  SetApplePlatformUmbrellaHeader.cmake  ToolchainCheck.cmake  TransformTypeScriptDefinitions.cmake  TranspileMinifyJavaScript.cmake  VSCodeToolchainSelector.cmake
sdk/enum/: ArucoMarkerFormat.json  SolvePnPMethod.json  TestEnum.json
sdk/enum/CompileTests/: CompileTestExampleEnum.json  CompileTestExampleFlags.json  CompileTestExampleFlags2.json
sdk/gentool/: README.md  generate-schema-fragment.js  generator-c.js  generator-cxx.js  generator-enum.js  generator-js.js  generator-objc.js  generator-swift.js  generator.js  gentool.schema.generated.json  gentool.schema.json  package.json  shared.js  util.js  validate-schemas.js
sdk/include/Posemesh/: API.hpp  ArucoDetection.hpp  CalibrationHelpers.hpp  Config.hpp  Landmark.hpp  Matrix3x3f.hpp  Matrix4x4f.hpp  Portals.hpp  PoseEstimation.hpp  PoseFactory.hpp  PoseTools.hpp  Posemesh.hpp  QRDetection.hpp  Vector2f.hpp  Vector3f.hpp  Vector4f.hpp
sdk/interface/: Landmark.json  LandmarkObservation.json  Matrix2x2.json  Matrix2x2f.json  Matrix3x3.json  Matrix3x3f.json  Matrix4x4.json  Matrix4x4f.json  Pose.json  Quaternion.json  Quaternionf.json  Tester.json  Tester2.json  Vector2.json  Vector2f.json  Vector3.json  Vector3f.json  Vector4.json  Vector4f.json
sdk/protobuf/: PosemeshSDKProtobuf.proto
sdk/scripts/: Build-Apple.ps1  Build-Library.ps1  Build-OpenCV.ps1  Bundle-Framework.ps1  Bundle-XCFramework.ps1  Format-Code.ps1  Get-Version.ps1
sdk/spatial-data/: DMTRecorder.md
sdk/src/: ArucoDetection.cpp  CalibrationHelpers.cpp  CompileTestFunctions.cpp  CompileTestMethods.cpp  Config.cpp  Landmark.cpp  Matrix2x2.cpp  Matrix3x3.cpp  Matrix3x3f.gen.cpp  Matrix4x4.cpp  Matrix4x4f.gen.cpp  PoseEstimation.cpp  PoseFactory.cpp  PoseTools.cpp  Posemesh.cpp  QRDetection.cpp  Quaternion.cpp  Vector2.cpp  Vector2f.cpp  Vector2f.gen.cpp  Vector3.cpp  Vector3f.cpp  Vector3f.gen.cpp  Vector4.cpp  Vector4f.cpp  Vector4f.gen.cpp
(+244 files in other folders)
