[package]
name = "posemesh-networking"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
lazy_static = "1.5.0"
libp2p-stream = { git = "https://github.com/aukilabs/rust-libp2p.git", rev = "eee1374" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
pyo3 = { version = "0.22.6", features = ["extension-module"], optional = true }
pyo3-log = { version = "0.11.0", optional = true }

[target.'cfg(not(target_family="wasm"))'.dependencies]
libp2p = { git = "https://github.com/aukilabs/rust-libp2p.git", rev = "eee1374", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "serde", "relay", "identify", "kad", "dns", "autonat" ] }
tokio = { version = "1.40.0", features = ["full"] }
libp2p-webrtc = { git = "https://github.com/aukilabs/rust-libp2p.git", rev = "eee1374", features = ["tokio"] }

[target.'cfg(target_family="wasm")'.dependencies]
libp2p = { git = "https://github.com/aukilabs/rust-libp2p.git", rev = "eee1374", features = [ "wasm-bindgen", "macros", "gossipsub", "serde", "identify", "kad", "autonat", "relay" ] }
libp2p-webrtc-websys = { git = "https://github.com/aukilabs/rust-libp2p.git", rev = "eee1374" }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.42"
serde-wasm-bindgen = "0.6.5"

[features]
default = []
cpp = []
rust = []
wasm = []
py = ["dep:pyo3", "dep:pyo3-log"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[example]]
name = "relay"
path = "examples/relay.rs"
required-features = ["rust"]

[[example]]
name = "autonat"
path = "examples/autonat_client.rs"
required-features = ["rust"]

[[example]]
name = "holepunch"
path = "examples/private_dialer.rs"
required-features = ["rust"]
