[package]
name = "base"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
posemesh-domain = { workspace = true }
posemesh-networking = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["posemesh-domain/default", "posemesh-networking/default"]
c = ["posemesh-domain/c", "posemesh-networking/c"]
