[package]
name = "posemesh-compute-node"
version = "0.1.12"
edition = "2021"
license = "MIT"
description = "Posemesh compute node engine: config, DDS/DMS, heartbeat, storage (no persistence)."
repository = "https://github.com/aukilabs/prompting"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
compute-runner-api = { package = "posemesh-compute-node-runner-api", version = "0.1.1", path = "../compute-node-runner-api" }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
parking_lot = { workspace = true }
posemesh-node-registration = { version = "0.1.5", path = "../node-registration" }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "fs", "signal"] }
tokio-util = { workspace = true, features = ["rt"] }
tower = { workspace = true, features = ["util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "json", "env-filter"] }
url = { workspace = true }
uuid = { workspace = true }
posemesh-domain-http = { version = "1.3.0" }

[dev-dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
httpmock = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
    "test-util",
] }
tower = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }

[features]
metrics = []
