[package]
name = "posemesh-disco"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[build-dependencies]
prost-build = "0.13.5"

[dependencies]
prost = "0.13"
prost-types = "0.13.5"
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true } 
chrono = "0.4.41"
hex = { workspace=true }
posemesh-utils = { workspace = true, features = ["crypto"] }
base64 = "0.22.1"

[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
tracing-wasm = { workspace = true }
console_error_panic_hook = { workspace = true }
web-sys = { version = "0.3.77", features = ["ErrorEvent", "WebSocket", "MessageEvent"] }
uuid = { workspace = true, features = ["v4", "js"] }

[target.'cfg(target_family="wasm")'.dependencies.getrandom]
version = "0.3.3"
features = ["wasm_js"]

[features]
default = []
c = []
node = []
