[package]
name = "posemesh-domain-http"
version = "1.4.0-rc.1"
edition = "2024"
repository = "https://github.com/aukilabs/posemesh/tree/main/core"
description = "HTTP client library for interacting with AukiLabs domain data services, supporting both native and WebAssembly targets."
license = "MIT"
rust-version = "1.89.0"

[dependencies]
base64 = {workspace = true}
serde_json = {workspace = true}
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "stream", "rustls-tls"]}
posemesh-utils = { workspace = true }
bytes = "1.10.1"
thiserror.workspace = true

[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_family="wasm")'.dependencies]
tracing-wasm.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook = { workspace = true }
wasm-streams = "0.4.2"

[dev-dependencies]
dotenvy = "0.15.7"
tokio-stream = "0.1.17"
wasm-bindgen-test.workspace = true
uuid.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # disable it for using serde-wasm-bindgen
