[package]
name = "posemesh-domain-http"
version = "1.4.0-rc.4"
edition = "2024"
repository = "https://github.com/aukilabs/posemesh/tree/main/core"
description = "HTTP client library for interacting with AukiLabs domain data services, supporting both native and WebAssembly targets."
license = "MIT"
rust-version = "1.89.0"

[dependencies]
base64 = {workspace = true}
serde_json = {workspace = true}
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "stream", "rustls-tls"]}
posemesh-utils = { workspace = true }
bytes = "1.10.1"
thiserror.workspace = true

[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
uniffi = { workspace = true, optional = true }

[target.'cfg(target_family="wasm")'.dependencies]
tracing-wasm.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook = { workspace = true }
wasm-streams = "0.4.2"

[build-dependencies]
uniffi = {workspace = true, features = ["build"]} 

[dev-dependencies]
dotenvy = "0.15.7"
tokio-stream = "0.1.17"
wasm-bindgen-test.workspace = true
uuid.workspace = true

[dependencies.pyo3]
optional = true
version = "0.27.0"
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
features = ["abi3-py39"]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = []
uniffi = ["dep:uniffi", "dep:pyo3"]

[profile.release]
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # disable it for using serde-wasm-bindgen
