[package]
name = "domain"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[build-dependencies]
cbindgen = "0.28.0"
pb-rs = "0.10.0"

[dependencies]
futures = { workspace = true } 
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
quick-protobuf = { workspace = true }
quick-protobuf-codec = { workspace = true }
async-trait = {workspace = true} 
jsonwebtoken = "9.3.0"
tracing = { workspace = true }
networking = { workspace = true }
rs_merkle = "1.5.0"
sha2 = "0.10.8"
hex = "0.4.3"
thiserror = { workspace = true }

[target.'cfg(not(target_family="wasm"))'.dependencies]
libp2p = { workspace = true, features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "serde", "relay", "identify", "kad", "dns", "autonat" ] }
tokio = { workspace = true, features = ["full"] }
runtime = { workspace = true }
uuid = { version = "1.13.2", features = ["v4"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-serde_json-1"], optional = true }

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
libp2p = { workspace = true, features = [ "wasm-bindgen", "gossipsub" ] }
serde-wasm-bindgen = { workspace = true }
uuid = { version = "1.13.2", features = ["v4", "js"] }
tracing-wasm = { workspace = true }
console_error_panic_hook = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
c = []
fs = ["dep:tokio-postgres"]
capability = []
