[package]
name = "posemesh-domain"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[build-dependencies]
cbindgen = "0.28.0"
pb-rs = "0.10.0"

[dependencies]
futures = { workspace = true } 
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
quick-protobuf = { workspace = true }
quick-protobuf-codec = { workspace = true }
async-trait = {workspace = true} 
jsonwebtoken = "9.3.0"
tracing = { workspace = true }
posemesh-networking = { workspace = true }
rs_merkle = "1.5.0"
sha2 = "0.10.8"
hex = "0.4.3"
thiserror = { workspace = true }
ring = "0.17.14"
posemesh-utils = {workspace = true}
async-timer = "0.7.4"
base64 = "0.22.1"
posemesh-disco = { workspace = true }

[dev-dependencies]
mockall = {workspace = true}
wasm-bindgen-test = {workspace = true}

[target.'cfg(not(target_family="wasm"))'.dependencies]
libp2p = { workspace = true, features = [ "tokio", "gossipsub" ] }
tokio = { workspace = true, features = ["full"] }
posemesh-runtime = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-serde_json-1"], optional = true }

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
libp2p = { workspace = true, features = [ "wasm-bindgen", "gossipsub" ] }
serde-wasm-bindgen = { workspace = true }
uuid = { workspace = true, features = ["v4", "js"] }
tracing-wasm = { workspace = true }
console_error_panic_hook = { workspace = true }

[target.'cfg(target_family="wasm")'.dependencies.getrandom]
version = "0.3.3"
features = ["wasm_js"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
c = []
fs = ["dep:tokio-postgres"]

[profile.release]
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
